# test-graphql

./: Dockerfile  LICENSE  README.md  alembic.ini  backend_prestart.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements.txt  schema.py  serializers.py
migrations/: env.py
migrations/versions/: 2021-06-18_c5542cdfa48b_create_tables.py
