[tool.poetry]
name = "test-graphql"
version = "0.1.0"
description = ""
authors = ["Petr <p>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.61.1"
uvicorn = "^0.14.0"
sqlalchemy = "^1.4.18"
graphene = "^2.1.8"
alembic = "^1.6.5"
pydantic = "1.5"
graphene-pydantic = "0.1.0"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
